namespaces/knative-serving/istio-peerauthentications.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  labels:
    app.kubernetes.io/component: net-istio
    app.kubernetes.io/name: knative-serving
    app.kubernetes.io/version: 1.12.3
    networking.knative.dev/ingress-provider: istio
  name: net-istio-webhook
  namespace: knative-serving
spec:
  portLevelMtls:
    '8443':
      mode: PERMISSIVE
  selector:
    matchLabels:
      app: net-istio-webhook
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  labels:
    app.kubernetes.io/component: net-istio
    app.kubernetes.io/name: knative-serving
    app.kubernetes.io/version: 1.12.3
    networking.knative.dev/ingress-provider: istio
  name: webhook
  namespace: knative-serving
spec:
  portLevelMtls:
    '8443':
      mode: PERMISSIVE
  selector:
    matchLabels:
      app: webhook
